css: fix mobile overflow

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -182,6 +182,8 @@ main {
   top: 0;
   left: 0;
   right: 0;
+  width:100%;
+  overflow: hidden;
 
   background-image: url("../img/hero.jpg");
   background-size: 1400px auto;
